# ComfyUI-Notes-manager

./: README.md  __init__.py  pyproject.toml
web/: extension.js
